apparently i haven't synced for a long while