@@ -3,5 +3,11 @@
   :url "http://example.com/FIXME"
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
-  :dependencies [[org.clojure/clojure "1.11.1"]]
+  :dependencies [[org.clojure/clojure "1.12.0"]
+                 [dom-top "1.0.9"]
+                 [com.clojure-goes-fast/clj-async-profiler "1.5.1"]
+                 [net.mikera/core.matrix "LATEST"]
+                 [net.mikera/vectorz-clj "LATEST"]
+                 ]
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"]
   :repl-options {:init-ns advent.core})
